--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   animate_do: ^3.3.4
+  youtube_player_flutter: ^8.1.1
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
