--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   animate_do: ^3.3.4
   youtube_player_flutter: ^8.1.1
   url_launcher: ^6.3.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
