Login Request - Set User Logged In Function
Auth Provider

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   youtube_player_flutter: ^8.1.1
   url_launcher: ^6.3.0
   provider: ^6.1.2
+  shared_preferences: ^2.1.0
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
