--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   provider: ^6.1.2
   shared_preferences: ^2.1.0
   http: ^1.2.2
+  loading_animation_widget: ^1.3.0
+  awesome_dialog: ^3.1.0
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +69,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/logo.png
+    - assets/images/logo_squire.png
     - assets/images/login.jpg
   #   - images/a_dot_ham.jpeg
 
