--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,8 @@ dependencies:
   http: ^1.2.2
   loading_animation_widget: ^1.3.0
   awesome_dialog: ^3.1.0
-
+  shimmer: ^3.0.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
