--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,8 @@ dependencies:
   loading_animation_widget: ^1.3.0
   awesome_dialog: ^3.1.0
   shimmer: ^3.0.0
-  
+  youtube_parser: ^2.1.4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
