--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   awesome_dialog: ^3.1.0
   shimmer: ^3.0.0
   youtube_parser: ^2.1.4
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
